--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/BuildOutput.loader.js";
+      var loaderUrl = buildUrl + "/cse870-pbas.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BuildOutput.data.gz",
-        frameworkUrl: buildUrl + "/BuildOutput.framework.js.gz",
-        codeUrl: buildUrl + "/BuildOutput.wasm.gz",
+        dataUrl: buildUrl + "/cse870-pbas.data.gz",
+        frameworkUrl: buildUrl + "/cse870-pbas.framework.js.gz",
+        codeUrl: buildUrl + "/cse870-pbas.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project",
